force-app/main/default/objects/AffiliateMetadata__mdt/AffiliateMetadata__mdt.object-meta.xml
<CustomObject>
    <label>Affiliate Metadata</label>
    <pluralLabel>Affiliate Metadatas</pluralLabel>
</CustomObject>