force-app/main/default/objects/AffiliateMetadata__mdt/fields/BPCSEntity__c.field-meta.xml
<CustomField>
    <fullName>BPCSEntity__c</fullName>
    <label>BPCS  Entity</label>
    <length>35</length>
    <type>Text</type>
</CustomField>