force-app/main/default/objects/AffiliateMetadata__mdt/fields/BPCSTradingPartner__c.field-meta.xml
<CustomField>
    <fullName>BPCSTradingPartner__c</fullName>
    <label>BPCS Trading Partner</label>
    <length>15</length>
    <type>Text</type>
</CustomField>