force-app/main/default/objects/AffiliateMetadata__mdt/fields/BrandNewRegistrationInterval__c.field-meta.xml
<CustomField>
    <fullName>BrandNewRegistrationInterval__c</fullName>
    <description>Months interval for BrandNewRegistrationBatch</description>
    <inlineHelpText>In Months</inlineHelpText>
    <label>Brand New Registration Interval</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>