force-app/main/default/objects/AffiliateMetadata__mdt/fields/CallDueDateWarningThreshold__c.field-meta.xml
<CustomField>
    <fullName>CallDueDateWarningThreshold__c</fullName>
    <inlineHelpText>in number of days</inlineHelpText>
    <label>Call Due Date Warning Threshold</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>