force-app/main/default/objects/AffiliateMetadata__mdt/fields/ChannelNewRegistrationValidity__c.field-meta.xml
<CustomField>
    <fullName>ChannelNewRegistrationValidity__c</fullName>
    <inlineHelpText>In Months</inlineHelpText>
    <label>Channel New Registration Validity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>