force-app/main/default/objects/AffiliateMetadata__mdt/fields/CrossSellChannelReference__c.field-meta.xml
<CustomField>
    <fullName>CrossSellChannelReference__c</fullName>
    <label>Cross-Sell Channel Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>