force-app/main/default/objects/AffiliateMetadata__mdt/fields/DefaultCallTargetCompletionTime__c.field-meta.xml
<CustomField>
    <fullName>DefaultCallTargetCompletionTime__c</fullName>
    <inlineHelpText>in number of days</inlineHelpText>
    <label>Default Call Target Completion Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>