force-app/main/default/objects/AffiliateMetadata__mdt/fields/DefaulteStoreChannel__c.field-meta.xml
<CustomField>
    <fullName>DefaulteStoreChannel__c</fullName>
    <label>Default eStore Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>