force-app/main/default/objects/AffiliateMetadata__mdt/fields/DefaultSocialAccount__c.field-meta.xml
<CustomField>
    <fullName>DefaultSocialAccount__c</fullName>
    <label>Default Social Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>