force-app/main/default/objects/AffiliateMetadata__mdt/fields/DefaultSocialChannel__c.field-meta.xml
<CustomField>
    <fullName>DefaultSocialChannel__c</fullName>
    <label>Default Social Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>