force-app/main/default/objects/AffiliateMetadata__mdt/fields/EmailToCaseOrgWideEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailToCaseOrgWideEmailAddress__c</fullName>
    <inlineHelpText>Organization Wide Email address to where Email Reminders will be sent from</inlineHelpText>
    <label>Email To Case Org Wide Email Address</label>
    <type>Email</type>
</CustomField>