force-app/main/default/objects/AffiliateMetadata__mdt/fields/EnableContactDetailRemindersonEmail__c.field-meta.xml
<CustomField>
    <fullName>EnableContactDetailRemindersonEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Contact Detail Reminders on Email</label>
    <type>Checkbox</type>
</CustomField>