force-app/main/default/objects/AffiliateMetadata__mdt/fields/FeedbackEscalationOrgWideEmail__c.field-meta.xml
<CustomField>
    <fullName>FeedbackEscalationOrgWideEmail__c</fullName>
    <label>Feedback Escalation Org Wide Email</label>
    <type>Email</type>
</CustomField>