force-app/main/default/objects/AffiliateMetadata__mdt/fields/GSTRate__c.field-meta.xml
<CustomField>
    <fullName>GSTRate__c</fullName>
    <label>GST Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>