force-app/main/default/objects/AffiliateMetadata__mdt/fields/MilkCodeRestrictionPeriod__c.field-meta.xml
<CustomField>
    <fullName>MilkCodeRestrictionPeriod__c</fullName>
    <label>Milk Code Restriction Period (in Months)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>