force-app/main/default/objects/AffiliateMetadata__mdt/fields/NextAttemptDueDateinDays__c.field-meta.xml
<CustomField>
    <fullName>NextAttemptDueDateinDays__c</fullName>
    <label>Next Attempt Due Date (in Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>