force-app/main/default/objects/AffiliateMetadata__mdt/fields/OrderCancellationReason__c.field-meta.xml
<CustomField>
    <fullName>OrderCancellationReason__c</fullName>
    <label>Order Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>