force-app/main/default/objects/AffiliateMetadata__mdt/fields/OrderStatusItemLevel__c.field-meta.xml
<CustomField>
    <fullName>OrderStatusItemLevel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order status managed at line item level</description>
    <inlineHelpText>order status managed at line item level</inlineHelpText>
    <label>Order Status Item Level</label>
    <type>Checkbox</type>
</CustomField>