force-app/main/default/objects/AffiliateMetadata__mdt/fields/PeriodtRequest__c.field-meta.xml
<CustomField>
    <fullName>PeriodtRequest__c</fullName>
    <label>Sample Ineligibility Period (in Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>