force-app/main/default/objects/AffiliateMetadata__mdt/fields/PreferredDeliveryDateWaitTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredDeliveryDateWaitTime__c</fullName>
    <description>Preferred Delivery Date Wait Time in Days</description>
    <label>Preferred Delivery Date Wait Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>