force-app/main/default/objects/AffiliateMetadata__mdt/fields/RewardPointsValidPeriod__c.field-meta.xml
<CustomField>
    <fullName>RewardPointsValidPeriod__c</fullName>
    <label>Reward Points Valid Period (in Months)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>