force-app/main/default/objects/AffiliateMetadata__mdt/fields/RouteviaOmniChannel__c.field-meta.xml
<CustomField>
    <fullName>RouteviaOmniChannel__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Route via Omni Channel</label>
    <type>Checkbox</type>
</CustomField>