force-app/main/default/objects/AffiliateMetadata__mdt/fields/SampleRequestPricebook__c.field-meta.xml
<CustomField>
    <fullName>SampleRequestPricebook__c</fullName>
    <label>Sample Request Pricebook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>